# openswissdata

./: .env.example  .gitignore  .gitignore.local  .railwayignore  CLAUDE.md  README.md  glama.json  package-lock.json  package.json  server.json  tsconfig.json  vitest.config.ts
.design-preview/: analyse-strategique-2026-05-11.html  audit-nuit-2026-05-06.html  audit-pre-launch-7-mai.html  checklist-audit-pages.html  debrief-7-mai-2026.html  decision-t3-repo-public.html  email-launch-guide.html  index.html  maquette-5-quickwins.html  mcp-v1-vs-v2.html  mockup-footer-D-fullbleed-overlay.html  mockup-footer-E-fade-bottom.html  mockup-footer-F-split-asymmetric.html  mockup-footer-F1-mirror-horizontal.html  mockup-footer-F2-mirror-vertical.html  mockup-footer-F3-flip-clean.html  mockup-footer-F4-flip-with-trace.html  mockup-hero-banner-bg.html  mockup-hero-classifications-mirror.html  mockup-hero-classifications.html  mockup-hero-finma.html  mockup-logo-A-editorial-minimal.html  mockup-logo-B-diagrammatic.html  mockup-logo-C-swiss-brutalist.html  phase0-execution-2026-05-07.html  plan-acquisition-discret.html  plan-acquisition-launch.html  profil-claude-alain-martin.html  prospection-plan-200chf-2026-05-07.html  rapport-2026-05-06.html  recap-final.html  recap-nuit-2-mai.html  recap-nuit-3-mai.html  recap-session.html  roadmap-launch-jeudi.html  sales-nav-plan-2026-05-12.html  sentry-and-self-purchase-guide.html  synthese-finale-2026-04-30.html
docs/: STATUS.md  competitive-analysis-2026-04-30.md  dataset-discoveries-2026-04-23.md  email-setup.md  legal-correspondence.md  market-demand-analysis.md  marketing-automation-2026-04-24.md  osdsdr-spec-2026-04-24.md  preflight-12-resend.md  preflight-13-legal.md  preflight-14-stripe-live.md  roadmap-datasets.md
etl/: canary-baseline.json
presentation/: index.html
sdks/sdk-py/: .gitignore  README.md  pyproject.toml
sdks/sdk-py/examples/: async_demo.py  basic.py  pandas_integration.py
sdks/sdk-py/src/openswissdata/: __init__.py  __main__.py  _constants.py  async_client.py  client.py  exceptions.py  types.py
sdks/sdk-py/tests/: conftest.py  test_async.py  test_client.py
(+347 files in other folders)
